Modify runelite-plugin.properties for Events plugin
Updated plugin properties for Events Made Easy.

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=${name}
-author=${author}
-description=${description}
-tags=
-plugins=${package}.${plugin_prefix}Plugin
+displayName=Events Made Easy
+author=NocturneCC
+description=Runelite plugin for community-run OSRS events such as bingo, tile boards, and team-based challenges.
+tags=events,bingo,tiles,teams
+plugins=net.runelite.client.plugins.eventsplugin.EventsPlugin
