Update plugin path for EventsPlugin

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -2,4 +2,4 @@ displayName=Events Made Easy
 author=NocturneCC
 description=Runelite plugin for community-run OSRS events such as bingo, tile boards, and team-based challenges.
 tags=events,bingo,tiles,teams
-plugins=net.runelite.client.plugins.eventsplugin.EventsPlugin
+plugins=cc.nocturne.eventsmadeeasy.EventsPlugin
