--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
 displayName=Events Made Easy
 author=NocturneCC
-description=Create and join community-run OSRS events with live boards, eligible drops, and Google Sheets integration.
-tags=event,bingo,board,community
-plugins=net.runelite.client.plugins.eventsplugin.EventsPlugin
+description=Runelite plugin for community-run OSRS events such as bingo, tile boards, and team-based challenges.
+tags=events,bingo,tiles,teams
+plugins=cc.nocturne.eventsmadeeasy.EventsPlugin
