Revise plugin properties for Events Made Easy
Updated author name, support link, and description for clarity.

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,6 @@
 displayName=Events Made Easy
-author=NocturneCC
-description=Runelite plugin for community-run OSRS events such as bingo, tile boards, and team-based challenges.
-tags=events,bingo,tiles,teams
+author=Nocturne
+support=https://github.com/NocturneCC/events-made-easy
+description=A plugin for creating, joining, and participating in community-run OSRS events such as bingo and tile-based challenges.
+tags=event,bingo,board,community
 plugins=cc.nocturne.eventsmadeeasy.EventsPlugin
